apps/testing-06-07-2/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testing-06-07-2
  namespace: dev
  labels:
    app: testing-06-07-2
    backstage.io/kubernetes-id: testing-06-07-2
    environment: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: testing-06-07-2
  template:
    metadata:
      labels:
        app: testing-06-07-2
        backstage.io/kubernetes-id: testing-06-07-2
        environment: dev
    spec:
      containers:
        - name: testing-06-07-2
          image: chaitanyapandeygspann/testing-06-07-2:1.0.1
          ports:
            - containerPort: 8080
