apps/testing-06-07-2/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testing-06-07-2
  namespace: dev
  labels:
    backstage.io/kubernetes-id: testing-06-07-2
    environment: dev
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /testing-06-07-2-dev(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: testing-06-07-2
                port:
                  number: 80
